WIP UI logic and html

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,28 @@
 body {
   background-color: aqua;
+  margin: 50px;
+}
+
+.play{
+  display: none;
+}
+
+.playerStatus{
+  display: none;
+}
+
+.status{
+  margin: 15px;
+}
+
+#battleAMonster{
+  display:none;
+}
+
+#tripAndFall{
+  display: none;
+}
+
+#findFood{
+  display:none;
 }
